# simplestl

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile
docs/: index.html
docs/html/: graph_legend.html
src/: main.cpp  simplestl.h
test/: unit_test.cpp
